--- a/tutorial-project-161522/www/sets.html
+++ b/tutorial-project-161522/www/sets.html
@@ -42,7 +42,7 @@
 		</nav>
 		<div class="magicdb-header">
 			<h1>Sets</h1>
-			<h3>Some description about the sets...</h3>
+			<h3>Cards are realeased in different sets, here are some of them. </h3>
 		</div>
 
 		<div class="container-fluid">
