--- a/IDB1.html
+++ b/IDB1.html
@@ -8,7 +8,7 @@
 <td valign=bottom>&nbsp;<br>
 <font color="#ffffff" face="helvetica, arial">&nbsp;<br><big><big><strong>models</strong></big></big></font></td
 ><td align=right valign=bottom
-><font color="#ffffff" face="helvetica, arial"><a href=".">index</a><br><a href="file:/v/filer4b/v38q001/joeldavi/softwareengineering/magicdbswe/app/models.py">/v/filer4b/v38q001/joeldavi/softwareengineering/magicdbswe/app/models.py</a></font></td></tr></table>
+><font color="#ffffff" face="helvetica, arial"><a href=".">index</a><br><a href="file:/v/filer4b/v38q001/joser/Documents/CS_373/magicdbswe/app/models.py">/v/filer4b/v38q001/joser/Documents/CS_373/magicdbswe/app/models.py</a></font></td></tr></table>
     <p><tt>#&nbsp;A&nbsp;Database&nbsp;for&nbsp;Magic&nbsp;the&nbsp;Gathering&nbsp;Cards<br>
 #<br>
 #&nbsp;pylint:disable=invalid-name,line-too-long,no-member,too-few-public-methods,locally-disabled</tt></p>
@@ -74,7 +74,7 @@ Data descriptors defined here:<br>
 </dl>
 <hr>
 Data and other attributes defined here:<br>
-<dl><dt><strong>__mapper__</strong> = &lt;Mapper at 0x7f27c7ce97b8; Artist&gt;</dl>
+<dl><dt><strong>__mapper__</strong> = &lt;Mapper at 0x7fd97ed9b898; Artist&gt;</dl>
 
 <dl><dt><strong>__table__</strong> = Table('Artists', MetaData(bind=None), Column('ar...mSets', Integer(), table=&lt;Artists&gt;), schema=None)</dl>
 
@@ -167,7 +167,7 @@ Data descriptors defined here:<br>
 </dl>
 <hr>
 Data and other attributes defined here:<br>
-<dl><dt><strong>__mapper__</strong> = &lt;Mapper at 0x7f27c7cc99b0; Card&gt;</dl>
+<dl><dt><strong>__mapper__</strong> = &lt;Mapper at 0x7fd97ed7ba90; Card&gt;</dl>
 
 <dl><dt><strong>__table__</strong> = Table('Cards', MetaData(bind=None), Column('card...Key('Artists.name'), table=&lt;Cards&gt;), schema=None)</dl>
 
@@ -248,7 +248,7 @@ Data descriptors defined here:<br>
 </dl>
 <hr>
 Data and other attributes defined here:<br>
-<dl><dt><strong>__mapper__</strong> = &lt;Mapper at 0x7f27c7ce9278; Set&gt;</dl>
+<dl><dt><strong>__mapper__</strong> = &lt;Mapper at 0x7fd97ed9b358; Set&gt;</dl>
 
 <dl><dt><strong>__table__</strong> = Table('Sets', MetaData(bind=None), Column('code'..., String(length=256), table=&lt;Sets&gt;), schema=None)</dl>
 
@@ -317,7 +317,7 @@ Data descriptors defined here:<br>
 </dl>
 <hr>
 Data and other attributes defined here:<br>
-<dl><dt><strong>__mapper__</strong> = &lt;Mapper at 0x7f27c7ce9cc0; Subtype&gt;</dl>
+<dl><dt><strong>__mapper__</strong> = &lt;Mapper at 0x7fd97ed9bda0; Subtype&gt;</dl>
 
 <dl><dt><strong>__table__</strong> = Table('SubTypes', MetaData(bind=None), Column('n...('Cards.cardId'), table=&lt;SubTypes&gt;), schema=None)</dl>
 
