made small description changes

--- a/tutorial-project-161522/www/cards.html
+++ b/tutorial-project-161522/www/cards.html
@@ -42,7 +42,7 @@
 		</nav>
 		<div class="magicdb-header">
 			<h1>Cards</h1>
-			<h3>There are thousands of unique cards in Magic, here they are. </h3>
+			<h3>There are thousands of unique cards in Magic, here are some of them. </h3>
 		</div>
 
 		<div class="container-fluid">
