--- a/tutorial-project-161522/www/artists.html
+++ b/tutorial-project-161522/www/artists.html
@@ -42,7 +42,7 @@
 		</nav>
 		<div class="magicdb-header">
 			<h1>Artists</h1>
-			<h3>Magic the Gathering is unique because each card has an multiple artists that design individual cards, here are some of those artists. </h3>
+			<h3>Magic the Gathering is unique in such way that each card is designed by one of many individual artists, here are some of those artists. </h3>
 		</div>
 
 		<div class="container-fluid">
