--- a/tutorial-project-161522/www/about.html
+++ b/tutorial-project-161522/www/about.html
@@ -177,7 +177,47 @@
 
 		<div id="design-sec" class="about-section">
 			<h2>API</h2>
-			<p>Our API is lit</p>
+			<p>The Magic: The Gathering API we are using is structured in a way that allows for easy searching through cards and sets and works with a variety of parameters. The database is grouped into four pillars: Cards, Sets, Card Types, and Formats. </p>
+
+		<p><u>Cards</u> is self explanatory and denotes the cards available in the game. Each card has a variety of parameters:</p>
+		<p><u>name:</u> The card name. For split, double-faced and flip cards, just the name of one side of the card. Basically each ‘sub-card’ has its own record.</p>
+		<p><u>layout:</u> The card layout. Possible values: normal, split, flip, double-faced, token, plane, scheme, phenomenon, leveler, vanguard</p>
+		<p><u>cmc:</u> Converted mana cost. Always a number.</p>
+		<p><u>colors:</u> The card colors. Usually this is derived from the casting cost, but some cards are special (like the back of dual sided cards and Ghostfire).</p>
+		<p><u>colorIdentity:</u> The card colors by color code. [“Red”, “Blue”] becomes [“R”, “U”]</p>
+		<p><u>type:</u> The card type. This is the type you would see on the card if printed today. Note: The dash is a UTF8 'long dash’ as per the MTG rules</p>
+		<p><u>supertypes:</u> The supertypes of the card. These appear to the far left of the card type. Example values: Basic, Legendary, Snow, World, Ongoing</p>
+		<p><u>types:</u> The types of the card. These appear to the left of the dash in a card type. Example values: Instant, Sorcery, Artifact, Creature, Enchantment, Land, Planeswalker</p>
+		<p><u>subtypes:</u> The subtypes of the card. These appear to the right of the dash in a card type. Usually each word is its own subtype. Example values: Trap, Arcane, Equipment, Aura, Human, Rat, Squirrel, etc.</p>
+		<p><u>rarity:</u> The rarity of the card. Examples: Common, Uncommon, Rare, Mythic Rare, Special, Basic Land</p>
+		<p><u>set:</u> The set the card belongs to (set code).</p>
+		<p><u>setName:</u> The set the card belongs to.</p>
+		<p><u>text:</u> The oracle text of the card. May contain mana symbols and other symbols.</p>
+		<p><u>flavor:</u> The flavor text of the card.</p>
+		<p><u>artist:</u> The artist of the card. This may not match what is on the card as MTGJSON corrects many card misprints.</p>
+		<p><u>number:</u> The card number. This is printed at the bottom-center of the card in small text. This is a string, not an integer, because some cards have letters in their numbers.</p>
+		<p><u>power:</u> The power of the card. This is only present for creatures. This is a string, not an integer, because some cards have powers like: “1+*”</p>
+		<p><u>toughness:</u> The toughness of the card. This is only present for creatures. This is a string, not an integer, because some cards have toughness like: “1+*”</p>
+		<p><u>loyalty:</u> The loyalty of the card. This is only present for planeswalkers.</p>
+		<p><u>foreignName:</u> The name of a card in a foreign language it was printed in</p>
+		<p><u>language:</u> The language the card is printed in. Use this parameter when searching by foreignName</p>
+		<p><u>gameFormat:</u> The game format, such as Commander, Standard, Legacy, etc. (when used, legality defaults to Legal unless supplied)</p>
+		<p><u>legality:</u> The legality of the card for a given format, such as Legal, Banned or Restricted.</p>
+		<p><u>page:</u> The page of data to request</p>
+		<p><u>pageSize:</u> The amount of data to return in a single request. The default is 100, the max is 1000. If more than 1000 is requested, 100 will be returned.</p>
+		<p><u>orderBy:</u> The field to order by in the response results</p>
+		<p><u>random:</u> Fetch any number of cards (controlled by pageSize) randomly</p>
+		<p><u>contains:</u> Filter cards based on whether or not they have a specific field available (like imageUrl) <br>
+		The database has two GET methods for searching through cards: Get All Cards and Get a Specific Card. Get All Cards returns a list of all of the cards in the database up to a specified pageSize, with a maximum of 100 cards per request. Get a Specific Card will retrieve a specific card from the database if given one or more of the paramaters above.</p>
+		<p><u>Sets</u> denotes a group of cards that were released at the same time by the developer and were designed to be played in the same environment. Being able to search for cards by set and see what cards are contained in a specific set is an important part of the knowledge of the game.<br>
+		Set has two parameters:</p>
+		<p><u>Name:</u> The name of the set</p>
+		<p><u>Block:</u> the block the set is in <br>
+		The database has commands to GET all sets and GET a specific set by set name. It can also Generate a Booster Pack for a specified set similar to booster packs sold at retail.</p>
+		<p><u>Card Types</u> denotes the different types or classes for each card. The types include things like artifact, creature, enchantment, etc. and have different effects and abilities when used in the card game. <br>
+		For types the database has three GET methods which are self explanatory. Get All Types, Get all Supertypes, and Get all Subtypes. </p>
+		<p><u>Formats</u> denotes special formats for playing the game and the database has one GET method for this pillar called Get All Formats. </p>
+
 			<br>
 		</div>
 
