--- a/tutorial-project-161522/www/about.html
+++ b/tutorial-project-161522/www/about.html
@@ -134,19 +134,20 @@
 			This is a database report for the wildly popular card game Magic the Gathering! Using our application a user can search for and get details about the various cards in MTG.
 
 			<h2> Developers: SWEet Gathering</h2>
+			<br>
 			<p><u>Nestor Castro: Junior, Front-end, Hosting</u>
 			<br>
-			He is a 3rd year Computer Science major at the University of Texas at Austin. He is the current VP of Communications of Sigma Lambda Beta, a Latino-based multicultural Fraternity. On his free time, he enjoys exploring the outdoors, playing pool, and jamming out to the Red Hot Chili Peppers.</p>
+			He is a 3rd year Computer Science major at the University of Texas at Austin. He is the current VP of Communications of Sigma Lambda Beta, a Latino-based multicultural Fraternity. On his free time, he enjoys exploring the outdoors, playing pool, and jamming out to the Red Hot Chili Peppers.He was responsible for setting up the GCP server and updating the image of the website.</p>
 
 			<p><u>Nicholas Cobb: Junior, Front-end, Website</u>
 			<br>
-			He is a 3rd year Computer Science major at the university of Texas at Austin. He has interned at Google two times and am about to again this summer. In his free time, he enjoys writing music and participating in political clubs on campus.</p>
+			He is a 3rd year Computer Science major at the university of Texas at Austin. He has interned at Google two times and am about to again this summer. In his free time, he enjoys writing music and participating in political clubs on campus.He was responsible for implementing the HTML, CSS and JavaScript/TypeScript for the website.</p>
 
 			<p><u>Joel Davis: Senior, Front-end, API</u>
 			<br>
-			He is a 4th-year Computer Science major at the University of Texas at Austin. Enjoys game development and software engineering. In his free time he likes video games, guitar, and skateboarding.</p>
+			He is a 4th-year Computer Science major at the University of Texas at Austin. Enjoys game development and software engineering. In his free time he likes video games, guitar, and skateboarding.He was responsible for documenting the API with Apiary, writing unit tests, and setting up the team’s continuous integration framework with Travis CI.</p>
 
-			<p><u>Nilo Lisboa: Senior, Back-End, Phase 1 Leader</u>
+			<p><u>Nilo Lisboa: Senior, Back-End, <b>Phase 1 Leader</b></u>
 			<br>
 			Nilo is a 4th-year Computer Science Major at UT Austin. He has interned twice at IBM both part-time and full-time. He really enjoys story-driven video games as well as archery and kendo.
 			He was responsible for designing the models and attributes in Phase 1 as well as creating the UML diagram.</p>
@@ -163,20 +164,31 @@
 
 		<div id="introduction" class="about-section">
 			<h2>Introduction</h2>
-			
+			<br>
 			<h4><em>What is the Problem?</em></h4>
 			<p>Magic the Gathering is a physical, and digital (came out at a later date), trading card game that pioneered this entire genre back in 1993 when it came out. It continues to thrive with millions of active players worldwide. With the age of the product though, comes the constant need for refreshment with the creation of new cards, game-modes, expansions containing hundreds of cards, and more. Due to that, nowadays, the game has over 16000 cards available and more than 70 card expansions. As a player, it is nigh impossible to pick out the cards you want for your deck, without being able to narrow down the search. The service we are creating would do just that.</p>
 			
 			<h4><em>Use Cases</em></h4>
 			<p>There are many use cases for such a database among players. Perhaps a player is looking for a specific card to put in their deck, but is unsure of what that card does, in which case a user can look for that card in our database to read up on its characteristics. Alternatively, Magic has many formats of play, and some of them can only make use of specific card sets. Standard format, the most popular, only allows players to build decks with the 2 most recent years of expansion releases. A player attempting to make standard a standard deck would look for cards among the sets that are permitted in that format by filtering our cards based on the sets they belong to. Some players specifically want cards that match an artstyle they like or just collect cards they think are pretty. In this case, a player would be able to look on our artist table and view which cards they worked on. Lastly, players could be trying to make Tribal decks, which look for cards of specific subtypes with the purpose of synergizing their effects. A user would then be able to visit our subtype table, and check out cards filtered by subtype, additionally, if they don’t even know which subtype they want to pick for a deck, there will be example cards of those subtypes available for users to view.</p>
 
+			<img src="images/UML.png" style = "width:30%" align="left">
 			<h4><em>Models</em></h4>
 			<p>Cards - This model contains information specifically regarding cards as implied in a card game, they are of immense importance and thus, have a large number of attributes. Cards have unique IDs identifying each of them</p>
+			<p>Set - This model contains information pertaining to sets, which in turn, are like containers upon which cards are released in MtG. Sets are a very helpful way to distinguish cards from each other. The Set model also has relations to all other models.</p>
+			<p>Artist - The artist model serves as another method for a user to distinguish cards, as many cards could have been worked on by a specific artist. This model is related to the Set and the Card model.</p>
+			<p>Subtype - The Subtype model serves as a final way to distinguish cards. Cards that have similar subtypes often synergize their effects, so it is important to be able to select subtypes of interest and view all related cards. This model is related to the Card and Set models.</p>
 			<br>
+			<h4><em>Relations<em></h4>
+			<p>[Card] many-to-many [Subtype]
+			[Card] many-to-one [Set]<br>
+			[Card] many-to-one [Artist]<br><br>
+			[Set] many-to-many [Artist]<br>
+			[Set] many-to-many [Subtype]</p>
 		</div>
-
+		<br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
 		<div id="design-sec" class="about-section">
 			<h2>API</h2>
+			<br>
 			<p>The Magic: The Gathering API we are using is structured in a way that allows for easy searching through cards and sets and works with a variety of parameters. The database is grouped into four pillars: Cards, Sets, Card Types, and Formats. </p>
 
 		<p><u>Cards</u> is self explanatory and denotes the cards available in the game. Each card has a variety of parameters:</p>
