sorting the non-tabular, grid of items. that's right am still bitter about this table thing smh.

--- a/tutorial-project-161522/www/cards.html
+++ b/tutorial-project-161522/www/cards.html
@@ -43,6 +43,19 @@
 		<div class="magicdb-header">
 			<h1>Cards</h1>
 			<h3>There are thousands of unique cards in Magic, here are some of them. </h3>
+			<div class="btn-group">
+			  <button class="btn btn-default btn-lg dropdown-toggle" type="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+			    Sort By: <span class="caret"></span>
+			  </button>
+			  <ul class="dropdown-menu">
+			    <ol>Name</ol>
+			    <ol>Mana Cost</ol>
+			    <ol>Power</ol>
+			    <ol>Toughness</ol>
+			    <ol>Rarity</ol>
+			  </ul>
+			</div>
+
 		</div>
 
 		<div class="container-fluid">
