--- a/tutorial-project-161522/www/sets.html
+++ b/tutorial-project-161522/www/sets.html
@@ -43,6 +43,17 @@
 		<div class="magicdb-header">
 			<h1>Sets</h1>
 			<h3>Cards are released in different sets, here are some of them. </h3>
+			<div class="btn-group">
+			  <button class="btn btn-default btn-lg dropdown-toggle" type="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+			    Sort By: <span class="caret"></span>
+			  </button>
+			  <ul class="dropdown-menu">
+			    <ol>Name</ol>
+			    <ol>Code</ol>
+			    <ol>Release Date</ol>
+			    <ol>Number of Cards</ol>
+			  </ul>
+			</div>
 		</div>
 
 		<div class="container-fluid">
