--- a/tutorial-project-161522/www/subtypes.html
+++ b/tutorial-project-161522/www/subtypes.html
@@ -43,6 +43,15 @@
 		<div class="magicdb-header">
 			<h1>Subtypes</h1>
 			<h3>Here you can search through cards by looking at their different subtypes.</h3>
+			<div class="btn-group">
+			  <button class="btn btn-default btn-lg dropdown-toggle" type="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+			    Sort By: <span class="caret"></span>
+			  </button>
+			  <ul class="dropdown-menu">
+			    <ol>Name</ol>
+			    <ol>Number of Cards</ol>
+			  </ul>
+			</div>
 		</div>
 
 		<div class="container-fluid">
