--- a/tutorial-project-161522/www/artists.html
+++ b/tutorial-project-161522/www/artists.html
@@ -43,6 +43,16 @@
 		<div class="magicdb-header">
 			<h1>Artists</h1>
 			<h3>Magic the Gathering is unique in such way that each card is designed by one of many individual artists, here are some of those artists. </h3>
+			<div class="btn-group">
+			  <button class="btn btn-default btn-lg dropdown-toggle" type="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+			    Sort By: <span class="caret"></span>
+			  </button>
+			  <ul class="dropdown-menu">
+			    <ol>Name</ol>
+			    <ol>Number of Cards</ol>
+			    <ol>Number of Sets</ol>
+			  </ul>
+			</div>
 		</div>
 
 		<div class="container-fluid">
