--- a/tutorial-project-161522/www/about.html
+++ b/tutorial-project-161522/www/about.html
@@ -112,7 +112,7 @@
 
 		<div id="stats" class="about-section">
 			<h1><strong>Stats</strong></h1>
-			<p><strong>Number of commits: </strong></p>
+			<p><strong>Number of commits: 100</strong></p>
 			<p><strong>Number of issues: 16</strong></p>
 			<p><strong>Number of unit tests: 12</strong></p>
 			<p><strong><a href="http://docs.apimagicthegatheringio.apiary.io">Link to Apiary API</strong></p>
