Fixed data section

--- a/tutorial-project-161522/www/about.html
+++ b/tutorial-project-161522/www/about.html
@@ -124,7 +124,7 @@
 
 		<div id="data-sec" class="about-section">
 			<h1><strong>Data</strong></h1>
-			<h4>links to data sources and how each was used.</h4>
+			<h4>The data and images for the website were gathered from the <a href = "https://docs.magicthegathering.io/">Magic the Gathering API.</a></h4>
 		</div>
 
 		<div class="divider"></div>
