--- a/tutorial-project-161522/www/cards.html
+++ b/tutorial-project-161522/www/cards.html
@@ -53,9 +53,24 @@
 			    <ol>Power</ol>
 			    <ol>Toughness</ol>
 			    <ol>Rarity</ol>
+			    <ol>Color</ol>
+			    <ol>Type</ol>
 			  </ul>
 			</div>
-
+			<div class="btn-group">
+			  <button class="btn btn-default btn-lg dropdown-toggle" type="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+			    Filter By: <span class="caret"></span>
+			  </button>
+			  <ul class="dropdown-menu">
+			    <ol><label class="checkbox-inline"><input type="checkbox" value="">Name</label><input type="text" class="form-control" id="usr"></ol>
+			    <ol><label class="checkbox-inline"><input type="checkbox" value="">Mana Cost</label><input type="text" class="form-control" id="usr"></ol>
+			    <ol><label class="checkbox-inline"><input type="checkbox" value="">Power</label><input type="text" class="form-control" id="usr"></ol>
+			    <ol><label class="checkbox-inline"><input type="checkbox" value="">Toughness</label><input type="text" class="form-control" id="usr"></ol>
+			    <ol><label class="checkbox-inline"><input type="checkbox" value="">Rarity</label><input type="text" class="form-control" id="usr"></ol>
+			    <ol><label class="checkbox-inline"><input type="checkbox" value="">Color</label><input type="text" class="form-control" id="usr"></ol>
+			    <ol><label class="checkbox-inline"><input type="checkbox" value="">Type</label><input type="text" class="form-control" id="usr"></ol>
+			  </ul>
+			</div>
 		</div>
 
 		<div class="container-fluid">
