--- a/tutorial-project-161522/www/subtypes.html
+++ b/tutorial-project-161522/www/subtypes.html
@@ -52,6 +52,17 @@
 			    <ol>Number of Cards</ol>
 			  </ul>
 			</div>
+			<div class="btn-group">
+			  <button class="btn btn-default btn-lg dropdown-toggle" type="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+			    Filter By: <span class="caret"></span>
+			  </button>
+			  <ul class="dropdown-menu">
+			    <ol><label class="checkbox-inline"><input type="checkbox" value="">Name</label><input type="text" class="form-control" id="usr"></ol>
+			    <ol><label class="checkbox-inline"><input type="checkbox" value="">Number of Cards</label><input type="text" class="form-control" id="usr"></ol>
+			    <ol><label class="checkbox-inline"><input type="checkbox" value="">Number of Sets</label><input type="text" class="form-control" id="usr"></ol>
+			    <ol><label class="checkbox-inline"><input type="checkbox" value="">Set</label><input type="text" class="form-control" id="usr"></ol>
+			  </ul>
+			</div>
 		</div>
 
 		<div class="container-fluid">
