sorry for messing up, sincerely nicc

--- a/tutorial-project-161522/www/about.html
+++ b/tutorial-project-161522/www/about.html
@@ -124,17 +124,27 @@
 
 		<div id="data-sec" class="about-section">
 			<h1><strong>Data</strong></h1>
-			<h4>links to data sources and how each was used.</h4>
+			<h4>The data and images for the website were gathered from the <a href = "https://docs.magicthegathering.io/">Magic the Gathering API.</a></h4>
 		</div>
 
 		<div class="divider"></div>
 
+		<h1 align="center"><strong>Technical Report</strong></h1>
+		<div id="report-toc" class="about-section">
+			<h2>Table of Contents</h2>
+			<h4>1. <a href="#report">About</a></h4>
+			<h4>2. <a href="#introduction">Introduction</a></h4>
+			<h4>3. <a href="#design-sec">API</a></h4>
+			<h4>4. <a href="#tools-sec">Tools</a></h4>
+			<h4>5. <a href="#hosting">Hosting</a></h4>
+		</div>
+
+		<div class="divider"></div><div class="divider"></div>
+
 		<div id="report" class="about-section">
-			<h1 align = "center"><strong>Technical Report</strong></h1>
 			This is a database report for the wildly popular card game Magic the Gathering! Using our application a user can search for and get details about the various cards in MTG.
 
-			<h2> Developers: SWEet Gathering</h2>
-			<br>
+			<h3 style="margin-bottom: 15px;">Developers: SWEet Gathering</h3>
 			<p><u>Nestor Castro: Junior, Front-end, Hosting</u>
 			<br>
 			He is a 3rd year Computer Science major at the University of Texas at Austin. He is the current VP of Communications of Sigma Lambda Beta, a Latino-based multicultural Fraternity. On his free time, he enjoys exploring the outdoors, playing pool, and jamming out to the Red Hot Chili Peppers.He was responsible for setting up the GCP server and updating the image of the website.</p>
@@ -163,7 +173,7 @@
 		</div>
 
 		<div id="introduction" class="about-section">
-			<h2>Introduction</h2>
+			<h2><em>Introduction</em></h2>
 			<br>
 			<h4><em>What is the Problem?</em></h4>
 			<p>Magic the Gathering is a physical, and digital (came out at a later date), trading card game that pioneered this entire genre back in 1993 when it came out. It continues to thrive with millions of active players worldwide. With the age of the product though, comes the constant need for refreshment with the creation of new cards, game-modes, expansions containing hundreds of cards, and more. Due to that, nowadays, the game has over 16000 cards available and more than 70 card expansions. As a player, it is nigh impossible to pick out the cards you want for your deck, without being able to narrow down the search. The service we are creating would do just that.</p>
