--- a/tutorial-project-161522/www/cards.html
+++ b/tutorial-project-161522/www/cards.html
@@ -9,11 +9,23 @@
 
 		<!-- Bootstrap -->
 		<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
+
+		<!-- React 
+		<script src="https://cdnjs.cloudflare.com/ajax/libs/react/15.3.1/react.min.js"></script>
+		<script src="https://cdnjs.cloudflare.com/ajax/libs/react/15.3.1/react-dom.min.js"></script>
+	    <script src="https://cdnjs.cloudflare.com/ajax/libs/babel-core/5.8.23/browser.min.js"></script>
+		<script type="text/babel">
+			var i=10;
+			ReactDOM.render(<h1>Hello, world {i}!</h1>, document.getElementById('qwerty123'));
+		</script>-->
+
 		<link rel="stylesheet" type="text/css" href="css/models.css">
 	</head>
 
 
 	<body>
+		<div id="qwerty123">
+		</div>
 		<nav class="navbar navbar-default">
 			<div class="container-fluid">
 				<!-- Brand and toggle get grouped for better mobile display -->
