--- a/tutorial-project-161522/www/index.html
+++ b/tutorial-project-161522/www/index.html
@@ -13,7 +13,7 @@
   </head>
   
 
-  <body class="splash">
+  <body>
     <nav class="navbar navbar-default">
       <div class="container-fluid">
         <!-- Brand and toggle get grouped for better mobile display -->
@@ -41,50 +41,91 @@
       </div><!-- /.container-fluid -->
     </nav>
 
-    <div id="main" class="title">
-      <img src="images/MainLogo.png" style="display: block; margin: auto; width: 50%;">
-    </div> <!-- end of title -->
+    <div class="overlay">
+      <img src="images/MainLogo.png" id="main-logo" style="display: block; margin: auto; width: 50%;">
+      <h1 class="index-descr">Magic the Gathering Database</h1>
+    </div>
 
-    <h1 class="index-descr">Magic the Gathering Database</h1>
-
-    <div class="col-md-12">
-      <div id="myCarousel" class="carousel slide" data-ride="carousel">
+    <!-- Full Page Image Background Carousel Header -->
+    <header id="myCarousel" class="carousel slide">
         <!-- Indicators -->
         <ol class="carousel-indicators">
-          <li data-target="#myCarousel" data-slide-to="0" class="active"></li>
-          <li data-target="#myCarousel" data-slide-to="1"></li>
-          <li data-target="#myCarousel" data-slide-to="2"></li>
-          <li data_target="#myCarousel" data-slide-to="3"></li>
+            <li data-target="#myCarousel" data-slide-to="0" class="active"></li>
+            <li data-target="#myCarousel" data-slide-to="1"></li>
+            <li data-target="#myCarousel" data-slide-to="2"></li>
+            <li data-target="#myCarousel" data-slide-to="3"></li>
         </ol>
-        <!-- Wrapper for slides -->
-        <div class="carousel-inner" role="listbox">
-          <div class="item active">
-            <div class="carousel-caption">
-              <h1><a href="cards.html">Look at cards!</a></h1>
+
+        <!-- Wrapper for Slides -->
+        <div class="carousel-inner">
+            <div class="item active">
+                <!-- Set the first background image using inline CSS below. -->
+                <div class="fill" style="background-image:url('images/genesis.jpg');"></div>
+                <div class="carousel-caption">
+                    <h2>Card: Progenitus</h2>
+                    <h2>Set: Conflux</h2>
+                    <h2>Subtype: Hydra Avatar</h2>
+                    <h2>Artist: Jaime Jones</h2>
+                </div>
             </div>
-          </div>
-          <div class="item">
-            <div class="carousel-caption">
-              <h1><a href="sets.html">Look at sets!</a></h1>
+            <div class="item">
+                <!-- Set the second background image using inline CSS below. -->
+                <div class="fill" style="background-image:url('images/resurgent.jpg');"></div>
+                <div class="carousel-caption">
+                    <h2>Card: Zendikar Resurgent</h2>
+                    <h2>Set: Oath of the Gatewatch</h2>
+                    <h2>Subtype: N/A</h2>
+                    <h2>Artist: Chris Rallis</h2>
+                </div>
             </div>
-          </div>
-          <div class="item">
-            <div class="carousel-caption">
-              <h1><a href="artists.html">Look at artists!</a></h1>
+            <div class="item">
+                <!-- Set the third background image using inline CSS below. -->
+                <div class="fill" style="background-image:url('images/planar.jpg');"></div>
+                <div class="carousel-caption">
+                    <h2>Card: Planar Bridge</h2>
+                    <h2>Set: Aether Revolt</h2>
+                    <h2>Subtype: N/A</h2>
+                    <h2>Artist: Chase Stone</h2>
+                </div>
             </div>
-          </div>
-          <div class="item">
-            <div class="carousel-caption">
-              <h1><a href="subtypes.html">Look at subtypes!</a></h1>
+            <div class="item">
+                <!-- Set the third background image using inline CSS below. -->
+                <div class="fill" style="background-image:url('images/viserys.jpg');"></div>
+                <div class="carousel-caption">
+                    <h2>Card: Anguished Unmaking</h2>
+                    <h2>Set: Shadows over Innistrad</h2>
+                    <h2>Subtype: N/A</h2>
+                    <h2>Artist: Wesley Burt</h2>
+                </div>
             </div>
-          </div>
         </div>
-      </div>
-    </div>
+
+        <!-- Controls -->
+        <a class="left carousel-control" href="#myCarousel" data-slide="prev">
+            <span class="icon-prev"></span>
+        </a>
+        <a class="right carousel-control" href="#myCarousel" data-slide="next">
+            <span class="icon-next"></span>
+        </a>
+
+    </header>
 
     <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
     <!-- Include all compiled plugins (below), or include individual files as needed -->
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
+    <script>
+      // A script to dynamically adjust the font size of the text and image on the splash.
+      function fontResize(){
+        unit = $(window).width() / 100;
+        carouselSize = Math.min(Math.max(10, 2.5 * unit), 40);   
+        indexDescr = Math.min(Math.max(16, 4 * unit), 64);
+
+        $('.carousel-caption h2').css('font-size', carouselSize + 'px');
+        $('.index-descr').css('font-size', indexDescrindexDescr + 'px');
+      }
+      fontResize();
+      $(window).resize( function () {fontResize()});
+    </script>
   </body>
 </html>
