--- a/IDB1.html
+++ b/IDB1.html
@@ -1,14 +1,14 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.0 Transitional//EN">
-<html><head><title>Python: module models</title>
+<html><head><title>Python: module testmodels</title>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
 </head><body bgcolor="#f0f0f8">
 
 <table width="100%" cellspacing=0 cellpadding=2 border=0 summary="heading">
 <tr bgcolor="#7799ee">
 <td valign=bottom>&nbsp;<br>
-<font color="#ffffff" face="helvetica, arial">&nbsp;<br><big><big><strong>models</strong></big></big></font></td
+<font color="#ffffff" face="helvetica, arial">&nbsp;<br><big><big><strong>testmodels</strong></big></big></font></td
 ><td align=right valign=bottom
-><font color="#ffffff" face="helvetica, arial"><a href=".">index</a><br><a href="file:/v/filer4b/v38q001/joeldavi/softwareengineering/magicdbswe/app/models.py">/v/filer4b/v38q001/joeldavi/softwareengineering/magicdbswe/app/models.py</a></font></td></tr></table>
+><font color="#ffffff" face="helvetica, arial"><a href=".">index</a><br><a href="file:/v/filer4b/v38q001/joeldavi/softwareengineering/magicdbswe/app/testmodels.py">/v/filer4b/v38q001/joeldavi/softwareengineering/magicdbswe/app/testmodels.py</a></font></td></tr></table>
     <p><tt>#&nbsp;A&nbsp;Database&nbsp;for&nbsp;Magic&nbsp;the&nbsp;Gathering&nbsp;Cards<br>
 #<br>
 #&nbsp;pylint:disable=invalid-name,line-too-long,no-member,too-few-public-methods,locally-disabled</tt></p>
@@ -23,10 +23,10 @@
 <dt><font face="helvetica, arial">flask_sqlalchemy.Model(<a href="flask_sqlalchemy.html#Model">flask_sqlalchemy.Model</a>)
 </font></dt><dd>
 <dl>
-<dt><font face="helvetica, arial"><a href="models.html#MArtist">MArtist</a>
-</font></dt><dt><font face="helvetica, arial"><a href="models.html#MCard">MCard</a>
-</font></dt><dt><font face="helvetica, arial"><a href="models.html#MSet">MSet</a>
-</font></dt><dt><font face="helvetica, arial"><a href="models.html#MSubtype">MSubtype</a>
+<dt><font face="helvetica, arial"><a href="testmodels.html#MArtist">MArtist</a>
+</font></dt><dt><font face="helvetica, arial"><a href="testmodels.html#MCard">MCard</a>
+</font></dt><dt><font face="helvetica, arial"><a href="testmodels.html#MSet">MSet</a>
+</font></dt><dt><font face="helvetica, arial"><a href="testmodels.html#MSubtype">MSubtype</a>
 </font></dt></dl>
 </dd>
 </dl>
@@ -47,14 +47,14 @@ cards&nbsp;=&nbsp;Cards&nbsp;that&nbsp;this&nbsp;artist&nbsp;has&nbsp;worked&nbs
 sets&nbsp;=&nbsp;Sets&nbsp;that&nbsp;this&nbsp;artist&nbsp;has&nbsp;worked&nbsp;on<br>&nbsp;</tt></td></tr>
 <tr><td>&nbsp;</td>
 <td width="100%"><dl><dt>Method resolution order:</dt>
-<dd><a href="models.html#MArtist">MArtist</a></dd>
+<dd><a href="testmodels.html#MArtist">MArtist</a></dd>
 <dd>flask_sqlalchemy.Model</dd>
 <dd><a href="flask_sqlalchemy.html#Model">flask_sqlalchemy.Model</a></dd>
 <dd><a href="builtins.html#object">builtins.object</a></dd>
 </dl>
 <hr>
 Methods defined here:<br>
-<dl><dt><a name="MArtist-__init__"><strong>__init__</strong></a>(self, name, numCards, numSets)</dt></dl>
+<dl><dt><a name="MArtist-__init__"><strong>__init__</strong></a>(self, name, numCards, numSets, sets)</dt></dl>
 
 <dl><dt><a name="MArtist-__repr__"><strong>__repr__</strong></a>(self)</dt><dd><tt>Return&nbsp;repr(self).</tt></dd></dl>
 
@@ -68,9 +68,11 @@ Data descriptors defined here:<br>
 </dl>
 <dl><dt><strong>numSets</strong></dt>
 </dl>
+<dl><dt><strong>sets</strong></dt>
+</dl>
 <hr>
 Data and other attributes defined here:<br>
-<dl><dt><strong>__mapper__</strong> = &lt;Mapper at 0x7f3927a8e588; MArtist&gt;</dl>
+<dl><dt><strong>__mapper__</strong> = &lt;Mapper at 0x7f51e758be80; MArtist&gt;</dl>
 
 <dl><dt><strong>__table__</strong> = Table('artists', MetaData(bind=None), Column('na...mSets', Integer(), table=&lt;artists&gt;), schema=None)</dl>
 
@@ -119,7 +121,7 @@ rarity&nbsp;=&nbsp;Rarity&nbsp;of&nbsp;the&nbsp;card<br>
 artist&nbsp;=&nbsp;Artist&nbsp;that&nbsp;made&nbsp;the&nbsp;card&nbsp;art<br>&nbsp;</tt></td></tr>
 <tr><td>&nbsp;</td>
 <td width="100%"><dl><dt>Method resolution order:</dt>
-<dd><a href="models.html#MCard">MCard</a></dd>
+<dd><a href="testmodels.html#MCard">MCard</a></dd>
 <dd>flask_sqlalchemy.Model</dd>
 <dd><a href="flask_sqlalchemy.html#Model">flask_sqlalchemy.Model</a></dd>
 <dd><a href="builtins.html#object">builtins.object</a></dd>
@@ -164,7 +166,7 @@ Data descriptors defined here:<br>
 </dl>
 <hr>
 Data and other attributes defined here:<br>
-<dl><dt><strong>__mapper__</strong> = &lt;Mapper at 0x7f3927ae69e8; MCard&gt;</dl>
+<dl><dt><strong>__mapper__</strong> = &lt;Mapper at 0x7f51e758b1d0; MCard&gt;</dl>
 
 <dl><dt><strong>__table__</strong> = Table('cards', MetaData(bind=None), Column('card...Key('artists.name'), table=&lt;cards&gt;), schema=None)</dl>
 
@@ -206,17 +208,17 @@ cards&nbsp;=&nbsp;Cards&nbsp;from&nbsp;this&nbsp;expansion<br>
 subTypes&nbsp;=&nbsp;All&nbsp;subtypes&nbsp;in&nbsp;the&nbsp;expansion<br>
 numCards&nbsp;=&nbsp;Number&nbsp;of&nbsp;cards&nbsp;that&nbsp;came&nbsp;out&nbsp;in&nbsp;the&nbsp;expansion<br>
 symbol&nbsp;=&nbsp;Symbol&nbsp;used&nbsp;to&nbsp;identify&nbsp;the&nbsp;expansion&nbsp;on&nbsp;cards<br>
-artists&nbsp;=&nbsp;Artists&nbsp;that&nbsp;made&nbsp;cards&nbsp;for&nbsp;this&nbsp;expansion<br>&nbsp;</tt></td></tr>
+xartists&nbsp;=&nbsp;Artists&nbsp;that&nbsp;made&nbsp;cards&nbsp;for&nbsp;this&nbsp;expansion<br>&nbsp;</tt></td></tr>
 <tr><td>&nbsp;</td>
 <td width="100%"><dl><dt>Method resolution order:</dt>
-<dd><a href="models.html#MSet">MSet</a></dd>
+<dd><a href="testmodels.html#MSet">MSet</a></dd>
 <dd>flask_sqlalchemy.Model</dd>
 <dd><a href="flask_sqlalchemy.html#Model">flask_sqlalchemy.Model</a></dd>
 <dd><a href="builtins.html#object">builtins.object</a></dd>
 </dl>
 <hr>
 Methods defined here:<br>
-<dl><dt><a name="MSet-__init__"><strong>__init__</strong></a>(self, code, name, rDate, block, numCards, symbol)</dt></dl>
+<dl><dt><a name="MSet-__init__"><strong>__init__</strong></a>(self, code, name, rDate, block, numCards, symbol, subTypes)</dt></dl>
 
 <dl><dt><a name="MSet-__repr__"><strong>__repr__</strong></a>(self)</dt><dd><tt>Return&nbsp;repr(self).</tt></dd></dl>
 
@@ -234,11 +236,15 @@ Data descriptors defined here:<br>
 </dl>
 <dl><dt><strong>rDate</strong></dt>
 </dl>
+<dl><dt><strong>subTypes</strong></dt>
+</dl>
 <dl><dt><strong>symbol</strong></dt>
+</dl>
+<dl><dt><strong>xartists</strong></dt>
 </dl>
 <hr>
 Data and other attributes defined here:<br>
-<dl><dt><strong>__mapper__</strong> = &lt;Mapper at 0x7f3927a8e160; MSet&gt;</dl>
+<dl><dt><strong>__mapper__</strong> = &lt;Mapper at 0x7f51e758b9b0; MSet&gt;</dl>
 
 <dl><dt><strong>__table__</strong> = Table('sets', MetaData(bind=None), Column('code'..., String(length=256), table=&lt;sets&gt;), schema=None)</dl>
 
@@ -274,12 +280,11 @@ Data descriptors inherited from <a href="flask_sqlalchemy.html#Model">flask_sqla
 &nbsp;<br>
 name&nbsp;=&nbsp;Name&nbsp;of&nbsp;the&nbsp;subtype<br>
 numCards&nbsp;=&nbsp;Number&nbsp;of&nbsp;existing&nbsp;cards&nbsp;of&nbsp;this&nbsp;subtype<br>
-exCard&nbsp;=&nbsp;Image&nbsp;of&nbsp;a&nbsp;card&nbsp;of&nbsp;this&nbsp;subtype,&nbsp;to&nbsp;represent&nbsp;the&nbsp;subtype<br>
-cards&nbsp;=&nbsp;cards&nbsp;that&nbsp;are&nbsp;of&nbsp;this&nbsp;subtype<br>
-sets&nbsp;=&nbsp;Sets&nbsp;that&nbsp;contain&nbsp;cards&nbsp;of&nbsp;this&nbsp;subtype<br>&nbsp;</tt></td></tr>
+xcards&nbsp;=&nbsp;cards&nbsp;that&nbsp;are&nbsp;of&nbsp;this&nbsp;subtype<br>
+ssets&nbsp;=&nbsp;Sets&nbsp;that&nbsp;contain&nbsp;cards&nbsp;of&nbsp;this&nbsp;subtype<br>&nbsp;</tt></td></tr>
 <tr><td>&nbsp;</td>
 <td width="100%"><dl><dt>Method resolution order:</dt>
-<dd><a href="models.html#MSubtype">MSubtype</a></dd>
+<dd><a href="testmodels.html#MSubtype">MSubtype</a></dd>
 <dd>flask_sqlalchemy.Model</dd>
 <dd><a href="flask_sqlalchemy.html#Model">flask_sqlalchemy.Model</a></dd>
 <dd><a href="builtins.html#object">builtins.object</a></dd>
@@ -296,11 +301,13 @@ Data descriptors defined here:<br>
 </dl>
 <dl><dt><strong>numCards</strong></dt>
 </dl>
+<dl><dt><strong>ssets</strong></dt>
+</dl>
 <dl><dt><strong>xcards</strong></dt>
 </dl>
 <hr>
 Data and other attributes defined here:<br>
-<dl><dt><strong>__mapper__</strong> = &lt;Mapper at 0x7f3927a8e860; MSubtype&gt;</dl>
+<dl><dt><strong>__mapper__</strong> = &lt;Mapper at 0x7f51e75b2198; MSubtype&gt;</dl>
 
 <dl><dt><strong>__table__</strong> = Table('subtypes', MetaData(bind=None), Column('n...ards', Integer(), table=&lt;subtypes&gt;), schema=None)</dl>
 
@@ -337,7 +344,9 @@ Data descriptors inherited from <a href="flask_sqlalchemy.html#Model">flask_sqla
 <strong>SHORT_LEN</strong> = 128<br>
 <strong>STG_LEN</strong> = 12<br>
 <strong>TEXT_LEN</strong> = 1024<br>
-<strong>app</strong> = &lt;Flask 'models'&gt;<br>
+<strong>app</strong> = &lt;Flask 'testmodels'&gt;<br>
 <strong>db</strong> = &lt;SQLAlchemy engine=sqlite:////v/filer4b/v38q001/joeldavi/softwareengineering/magicdbswe/app/test&gt;<br>
+<strong>set_artist_table</strong> = Table('set_artist_table', MetaData(bind=None), C...s.name'), table=&lt;set_artist_table&gt;), schema=None)<br>
+<strong>set_subtype_table</strong> = Table('set_subtype_table', MetaData(bind=None), ....code'), table=&lt;set_subtype_table&gt;), schema=None)<br>
 <strong>subtype_table</strong> = Table('subtype_table', MetaData(bind=None), Colu...ds.cardId'), table=&lt;subtype_table&gt;), schema=None)</td></tr></table>
 </body></html>
