--- a/IDB2.html
+++ b/IDB2.html
@@ -72,7 +72,7 @@ Data descriptors defined here:<br>
 </dl>
 <hr>
 Data and other attributes defined here:<br>
-<dl><dt><strong>__mapper__</strong> = &lt;Mapper at 0x1068bac18; MArtist&gt;</dl>
+<dl><dt><strong>__mapper__</strong> = &lt;Mapper at 0x105c02978; MArtist&gt;</dl>
 
 <dl><dt><strong>__table__</strong> = Table('artists', MetaData(bind=None), Column('na...mSets', Integer(), table=&lt;artists&gt;), schema=None)</dl>
 
@@ -166,7 +166,7 @@ Data descriptors defined here:<br>
 </dl>
 <hr>
 Data and other attributes defined here:<br>
-<dl><dt><strong>__mapper__</strong> = &lt;Mapper at 0x1068a9f60; MCard&gt;</dl>
+<dl><dt><strong>__mapper__</strong> = &lt;Mapper at 0x105beacc0; MCard&gt;</dl>
 
 <dl><dt><strong>__table__</strong> = Table('cards', MetaData(bind=None), Column('card...Key('artists.name'), table=&lt;cards&gt;), schema=None)</dl>
 
@@ -244,7 +244,7 @@ Data descriptors defined here:<br>
 </dl>
 <hr>
 Data and other attributes defined here:<br>
-<dl><dt><strong>__mapper__</strong> = &lt;Mapper at 0x1068ba780; MSet&gt;</dl>
+<dl><dt><strong>__mapper__</strong> = &lt;Mapper at 0x105c024e0; MSet&gt;</dl>
 
 <dl><dt><strong>__table__</strong> = Table('sets', MetaData(bind=None), Column('code'..., String(length=256), table=&lt;sets&gt;), schema=None)</dl>
 
@@ -307,7 +307,7 @@ Data descriptors defined here:<br>
 </dl>
 <hr>
 Data and other attributes defined here:<br>
-<dl><dt><strong>__mapper__</strong> = &lt;Mapper at 0x1068baeb8; MSubtype&gt;</dl>
+<dl><dt><strong>__mapper__</strong> = &lt;Mapper at 0x105c02c18; MSubtype&gt;</dl>
 
 <dl><dt><strong>__table__</strong> = Table('subtypes', MetaData(bind=None), Column('n...ards', Integer(), table=&lt;subtypes&gt;), schema=None)</dl>
 
